--- a/images/php-fpm/php-fpm-nginx.conf
+++ b/images/php-fpm/php-fpm-nginx.conf
@@ -10,14 +10,19 @@ http {
     sendfile on;
     keepalive_timeout 65;
 
+    map $http_host $name {
+        hostnames;
+        volatile;
+        default 0;
+        example.com 1;
+    }
+
     server {
         listen 80 default_server;
         listen [::]:80 default_server;
-        
         server_name localhost;
         root /usr/php-app;
         index index.php index.html;
-
         # Handle static files and fallback to index.php
         location / {
             try_files $uri $uri/ /index.php?$query_string;
