conf.d sample image

--- a/images/conf.d/Dockerfile
+++ b/images/conf.d/Dockerfile
@@ -1,13 +1,22 @@
-FROM nginx:latest
+FROM node:20
 
-# Copy custom Nginx configuration
+# Install Nginx
+RUN apt-get update && \
+    apt-get install -y nginx && \
+    rm -rf /var/lib/apt/lists/*
+
+# Create app directory
+WORKDIR /usr/src/app
+
+# Copy application files
+COPY app.js ./
 COPY nginx.conf /etc/nginx/nginx.conf
-
-# Copy vhost configurations
 COPY conf.d /etc/nginx/conf.d
+COPY start.sh /usr/local/bin/start.sh
+RUN chmod +x /usr/local/bin/start.sh
 
 # Expose ports
 EXPOSE 80
 
-# Start Nginx
-CMD ["nginx", "-g", "daemon off;"]
+# Start all services with our startup script
+CMD ["/usr/local/bin/start.sh"]
