--- a/images/conf.d/conf.d/server1.conf
+++ b/images/conf.d/conf.d/server1.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name host_one;
 
     location / {
         proxy_pass http://localhost:3000;
